# rt_rs

./: .gitignore  1.js  Cargo.toml  README.adoc  index.js  package-lock.json  package.json  webpack.config.js
css/: styles.css
js/: index.js
scenes/: builder_test.json  default.json  teatime.bvh.json  teatime.json  test.json
src/: demo.rs
src/lib/: mod.rs  pipelines.rs  timing.rs  vertex.rs  web.rs
src/lib/bvh/: aabb.rs  mod.rs
src/lib/geom/: light.rs  mod.rs  v3.rs
src/lib/handlers/: basic.rs  blank.rs  bvh.rs  mod.rs  rf.rs
src/lib/handlers/bvh/: aabb.rs  data.rs  mod.rs
src/lib/scene/: camera.rs  mod.rs
src/lib/shaders/: compute.wgsl  mod.rs  render.wgsl
src/lib/state/: mod.rs  package.rs  timestamps.rs
src/tools/: bb.rs  builder.rs  bvh.rs  construct.rs  handler_data.rs  load.rs  precompute.rs
static/: index.html
static/css/: styles.css
