[package]
name = "rt_rs"
description = "Comparing efficacy of spatial hierarchies in the context of real-time ray tracing"
version = "0.1.0"
authors = ["Hank <hank@modernatomic.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[lib]
name = "rt"
path = "src/lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "demo"
path = "src/demo.rs"

[profile.release]
lto = true

[dependencies]
log = "0.4"
winit = { version = "0.29.15", features = ["serde"] }
wgpu = { version = "0.19.3", features = ["serde"] }
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0.81"
cfg-if = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
once_cell = "1.19.0"
wavefront = "0.2.3"
num-traits = "0.2.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4.35"
pollster = "0.3.0"
simple_logger = "4.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4.35", features = ["wasmbind"] }
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
wee_alloc = "0.4.2"
console_error_panic_hook = "0.1.5"